Bug 346017 - Choqok (KF5) does not display timelines with only one account configured
Summary: Choqok (KF5) does not display timelines with only one account configured
Status: RESOLVED FIXED
Alias: None
Product: choqok
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: Git
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Scarpino
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-09 11:00 UTC by Luca Beltrame
Modified: 2016-08-04 10:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Beltrame 2015-04-09 11:00:41 UTC
If the KF5-based version of Choqok is configured with only one account, the timeline of that account will not be visible in the main interface (but posts will be fetched, etc.). 
Adding a second account makes it display properly.

Reproducible: Always

Steps to Reproduce:
1. Start choqok (KF5 based)
2. Add a single account
3. Update timeline

Actual Results:  
No timeline is displayed in the UI

Expected Results:  
TImeline should be displayed even with a single account configured.

Recent master on openSUSE.
Comment 1 Andrea Scarpino 2015-04-09 20:58:51 UTC
Git commit 758eba3427050fe2afe3a68a17198d34f5941e46 by Andrea Scarpino.
Committed on 09/04/2015 at 20:56.
Pushed by scarpino into branch 'master'.

Fix regression of timeline not showing

M  +3    -2    choqok/mainwindow.cpp

http://commits.kde.org/choqok/758eba3427050fe2afe3a68a17198d34f5941e46