Fix regression of timeline not showing

BUG:346017